<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:id="@+id/rbGroup"
        android:background="@drawable/corner_8"
        android:backgroundTint="@color/white"
        android:elevation="3dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <RadioButton
            android:id="@+id/rbName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:paddingEnd="8dp"
            android:paddingVertical="16dp"
            android:text="@string/name" />

        <RadioButton
            android:id="@+id/rbDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="8dp"
            android:paddingVertical="16dp"
            android:text="@string/date" />

        <RadioButton
            android:id="@+id/rbSize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="16dp"
            android:paddingEnd="8dp"
            android:text="@string/size" />
    </RadioGroup>
</FrameLayout>