<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/corner_16"
        android:orientation="vertical"
        android:paddingVertical="12dp">

        <TextView
            android:id="@+id/tvOpen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp"
            android:text="@string/open_file"
            android:textColor="@color/text_title"
            app:drawableStartCompat="@drawable/ic_open"
            app:fontFamily="@font/inter_medium" />

        <TextView
            android:id="@+id/tvRename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp"
            android:text="@string/rename"
            android:textColor="@color/text_title"
            app:drawableStartCompat="@drawable/ic_rename"
            app:drawableTint="@color/text_grey"
            app:fontFamily="@font/inter_medium" />

        <TextView
            android:id="@+id/tvDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp"
            android:text="@string/delete"
            android:textColor="@color/text_title"
            app:drawableStartCompat="@drawable/ic_delete"
            app:fontFamily="@font/inter_medium" />

        <TextView
            android:id="@+id/tvShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp"
            android:text="@string/share"
            app:drawableTint="@color/text_grey"
            android:textColor="@color/text_title"
            app:drawableStartCompat="@drawable/ic_share"
            app:fontFamily="@font/inter_medium" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>