<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/background_color">

        <TextView
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/settings"
            android:textColor="?attr/text_color"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_language"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="14dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/ripple_corner_10_stroke"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:paddingVertical="16dp"
                android:paddingStart="12dp"
                android:text="@string/share"
                android:textColor="?attr/text_color"
                app:drawableStartCompat="@drawable/ic_share" />

            <TextView
                android:id="@+id/tvFeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="14dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/ripple_corner_10_stroke"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:paddingVertical="16dp"
                android:paddingStart="12dp"
                android:text="@string/feedback"
                android:textColor="?attr/text_color"
                app:drawableStartCompat="@drawable/ic_message" />

            <TextView
                android:id="@+id/tvPrivacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="14dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/ripple_corner_10_stroke"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:paddingVertical="16dp"
                android:paddingStart="12dp"
                android:text="@string/privacy_policy"
                android:textColor="?attr/text_color"
                app:drawableStartCompat="@drawable/ic_privacy" />

            <TextView
                android:id="@+id/tvRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="14dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/ripple_corner_10_stroke"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:paddingVertical="16dp"
                android:paddingStart="12dp"
                android:text="@string/rate_us"
                android:textColor="?attr/text_color"
                app:drawableStartCompat="@drawable/ic_rate" />

            <FrameLayout
                android:id="@+id/frNative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp"
                app:layout_constraintTop_toBottomOf="@+id/rcvLanguage"
                android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>