<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/header_color"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:background="@drawable/corner_5"
            android:backgroundTint="#EBEBEB"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp"
            android:text="1 item(s)"
            android:textColor="@color/text_title"
            android:textSize="10sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_dropdown" />

    </FrameLayout>

    <TextView
        android:id="@+id/tvCompress"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/compress"
        android:textColor="?attr/second_text_color"
        android:textSize="10sp"
        app:drawableTopCompat="@drawable/ic_compress_file" />

    <TextView
        android:id="@+id/tvExtract"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/extract"
        android:textColor="?attr/second_text_color"
        android:textSize="10sp"
        app:drawableTopCompat="@drawable/ic_extract" />

    <TextView
        android:id="@+id/tvMore"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/more"
        android:textColor="?attr/second_text_color"
        android:textSize="10sp"
        app:drawableTopCompat="@drawable/ic_more" />
</androidx.appcompat.widget.LinearLayoutCompat>