<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    android:fillViewport="true"
    tools:context=".fragment.HomeMainFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/frNative">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/background_color">

                <TextView
                    style="@style/TitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/app_name"
                    android:textColor="?attr/text_color"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_language"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="20dp" />
            </androidx.appcompat.widget.Toolbar>

            <TextView
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="16dp"
                android:text="@string/categories"
                android:textSize="16sp"
                android:textColor="?attr/text_color"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="14dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/corner_16_stroke"
                android:columnCount="3"
                android:paddingVertical="12dp">

                <TextView
                    android:id="@+id/tvArchiver"
                    style="@style/MediumText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:background="?attr/selectableItemBackground"
                    android:drawablePadding="6dp"
                    android:gravity="center"
                    android:paddingVertical="8dp"
                    android:text="@string/archiver"
                    android:textSize="12sp"
                    app:drawableTopCompat="@drawable/ic_archiver"
                    android:textColor="?attr/text_color"/>

                <TextView
                    android:id="@+id/tvDownload"
                    style="@style/MediumText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:background="?attr/selectableItemBackground"
                    android:drawablePadding="6dp"
                    android:gravity="center"
                    android:paddingVertical="8dp"
                    android:text="@string/download"
                    android:textSize="12sp"
                    app:drawableTopCompat="@drawable/ic_download"
                    android:textColor="?attr/text_color"/>

                <TextView
                    android:id="@+id/tvDocument"
                    style="@style/MediumText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:background="?attr/selectableItemBackground"
                    android:drawablePadding="6dp"
                    android:gravity="center"
                    android:paddingVertical="8dp"
                    android:text="@string/documents"
                    android:textSize="12sp"
                    app:drawableTopCompat="@drawable/ic_document"
                    android:textColor="?attr/text_color"/>

                <TextView
                    android:id="@+id/tvAudio"
                    style="@style/MediumText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:background="?attr/selectableItemBackground"
                    android:drawablePadding="6dp"
                    android:gravity="center"
                    android:paddingVertical="8dp"
                    android:text="@string/audios"
                    android:textSize="12sp"
                    app:drawableTopCompat="@drawable/ic_audio"
                    android:textColor="?attr/text_color"/>

                <TextView
                    android:id="@+id/tvVideo"
                    style="@style/MediumText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:background="?attr/selectableItemBackground"
                    android:drawablePadding="6dp"
                    android:gravity="center"
                    android:paddingVertical="8dp"
                    android:text="@string/videos"
                    android:textSize="12sp"
                    app:drawableTopCompat="@drawable/ic_video"
                    android:textColor="?attr/text_color"/>

                <TextView
                    android:id="@+id/tvImage"
                    style="@style/MediumText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:background="?attr/selectableItemBackground"
                    android:drawablePadding="6dp"
                    android:gravity="center"
                    android:paddingVertical="8dp"
                    android:text="@string/images"
                    android:textSize="12sp"
                    app:drawableTopCompat="@drawable/ic_image"
                    android:textColor="?attr/text_color"/>

            </GridLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clInternal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="14dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/ripple_corner_16_stroke"
                android:paddingTop="12dp"
                android:paddingBottom="24dp">

                <TextView
                    android:id="@+id/tvInternal"
                    style="@style/TitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="6dp"
                    android:text="@string/internal_storage"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="?attr/text_color"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/tvSeeInternal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:padding="6dp"
                    android:src="@drawable/ic_next"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <SeekBar
                    android:id="@+id/skStorage"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="16dp"
                    android:progress="80"
                    android:progressDrawable="@drawable/seekbar_drawable"
                    android:thumb="@null"
                    app:layout_constraintTop_toBottomOf="@id/tvInternal" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/lnInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="22dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="@id/skStorage"
                    app:layout_constraintTop_toTopOf="@id/skStorage">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_sd_card" />

                    <TextView
                        android:id="@+id/tvUsedSpace"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:text="Used: 189GB"
                        android:textColor="@color/white"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/tvFreeSpace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Free: 2.8GB"
                        android:textColor="@color/text_grey"
                        android:textSize="10sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <FrameLayout
        android:id="@+id/frNative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="200dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>